--- a/View/consulta1.html
+++ b/View/consulta1.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MONGODB</title>
+    <title>MongoDB</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body background='' style="margin:auto;height:100%;width:100%">
@@ -14,13 +15,13 @@
             <div class="container">
 
                 <ul class="nav navbar-nav">
-                    <li>
+                    <li class="active">
                         <a href="/consulta1">1</a>
                     </li>
                     <li>
                         <a href="/consulta2">2</a>
                     </li>
-                    <li >
+                    <li>
                         <a href="/consulta3">3</a>
                     </li>
                     <li>
@@ -35,7 +36,7 @@
                     <li>
                         <a href="/consulta7">7</a>
                     </li>
-                    <li >
+                    <li>
                         <a href="/consulta8">8</a>
                     </li>
                     <li>
@@ -48,7 +49,7 @@
             </div>
         </nav>
         <div class="jumbotron" style="padding:40px;">
-            
+
         </div>
     </div>
 </body>
