--- a/View/consulta3.html
+++ b/View/consulta3.html
@@ -50,6 +50,7 @@
         </nav>
         <div class="jumbotron" style="padding:40px;">
                 <form action="/consulta3" method="POST">
+                    <h5>Proveedores que venden alguna parte 'xcolor' o viven en '99999 Short Pier, Terra Del Fuego, TX 41299'</h5>
                     <select name="color" id="color">
                         <option value="Red">Rojo</option>
                         <option value="Green">Verde</option>  
